--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "discord-api-types": "^0.33.3",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
+    "firebase": "^9.8.2",
+    "firebase-admin": "^10.2.0",
     "node-fetch": "^2.6.7"
   }
 }
